New things added

--- a/html/HTMLBasics.html
+++ b/html/HTMLBasics.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body style="background-color:#eeefe5;">
 
 <h1>My First Heading</h1>
 
@@ -82,12 +82,17 @@ ToolTip : Mouse over this paragraph, to display the title attribute as a tooltip
 
    Oh, bring back my Bonnie to me.
 </pre>
-
-<!-- The HTML style attribute has the following syntax:
+<!-- HTML Styles
+ The HTML style attribute has the following syntax:
 <tagname style="property:value;"> -->
 
+<h1 style="color:blue;font-family:verdana;font-size:200%;text-align:center;">This is a heading</h1>
+<p style="color:red;font-family:courier;font-size:160%;text-align:center;">This is a paragraph.</p>
 
-
+<!-- HTML Text Formatting -->
+<p><b>This text is bold</b><strong>  This text is strong  </strong><mark>This text is marked </mark><del>This text is deleted</del></p
+<p><i>This text is italic</i><em>  This text is emphasize </em><small>This text is small </small><ins>This text is inserted</ins></p>
+<p>This is<sub> subscript</sub> and <sup>superscript</sup></p>
 
 </body>
 </html>
