--- a/html/HTMLBasics.html
+++ b/html/HTMLBasics.html
@@ -94,5 +94,13 @@ ToolTip : Mouse over this paragraph, to display the title attribute as a tooltip
 <p><i>This text is italic</i><em>  This text is emphasize </em><small>This text is small </small><ins>This text is inserted</ins></p>
 <p>This is<sub> subscript</sub> and <sup>superscript</sup></p>
 
+<p>The <abbr title="World Health Organization">WHO</abbr>abbreviations::: was founded in 1948.</p>
+<!-- HTML Colors -->
+<h3 style="background-color:Tomato;">Tomato</h3>
+<h3 style="background-color:Orange;">Orange</h3>
+
+<h3 style="border: 2px solid Tomato;">Hello World</h3>
+<h3 style="border: 2px solid DodgerBlue;">Hello World</h3>
+
 </body>
 </html>
