--- a/html/HTMLBasics.html
+++ b/html/HTMLBasics.html
@@ -64,7 +64,7 @@ ToolTip : Mouse over this paragraph, to display the title attribute as a tooltip
 <!-- HTML Headings
 >> You can change the size of a heading with the style attribute, using the font-size property.
 -->
-<h1 style="font-size:45px;">Heading 1</h1>
+<h1 id = "bookmark" style="font-size:45px;">Heading 1</h1>
 
 <!-- The <hr> tag defines a thematic break in an HTML page, and is most often displayed as a horizontal rule. -->
 <hr>
@@ -94,13 +94,54 @@ ToolTip : Mouse over this paragraph, to display the title attribute as a tooltip
 <p><i>This text is italic</i><em>  This text is emphasize </em><small>This text is small </small><ins>This text is inserted</ins></p>
 <p>This is<sub> subscript</sub> and <sup>superscript</sup></p>
 
-<p>The <abbr title="World Health Organization">WHO</abbr>abbreviations::: was founded in 1948.</p>
+<p>The <abbr title="World Health Organization">WHO</abbr> abbreviations::: was founded in 1948.</p>
 <!-- HTML Colors -->
 <h3 style="background-color:Tomato;">Tomato</h3>
 <h3 style="background-color:Orange;">Orange</h3>
 
-<h3 style="border: 2px solid Tomato;">Hello World</h3>
-<h3 style="border: 2px solid DodgerBlue;">Hello World</h3>
+<h3 style="border: 2px solid Tomato; font-family: verdana;">Hello World</h3>
+<h3 style="border: 2px solid DodgerBlue; font-family: courier;">Hello World</h3>
 
+<!-- The CSS padding property defines a padding (space) between the text and the border: -->
+<p style="border: 5px solid powderblue; padding: 30px;">This is a paragraph.</p>
+
+<!-- The CSS margin property defines a margin (space) outside the border: -->
+<p style="border: 5px solid red; margin: 50px;">This is a paragraph.</p>
+
+<!-- The id Attribute
+To define a specific style for one special element, add an id attribute to the element: -->
+<p id="p01">I am different. Used id Attribute</p>
+<!-- The class Attribute
+To define a style for a special type of elements, add a class attribute to the element: -->
+<p class="error">I am different too. Used id Attribute</p>
+<!-- This example links to a style sheet located in the same folder as the current page: -->
+<p id="externalId" class="externalClass">Style using from external css file</p>
+
+<!-- HTML Links - Syntax
+In HTML, links are defined with the <a> tag: -->
+
+<a class = "" href="https://www.w3schools.com/html/">Visit our HTML tutorial</a>
+<p><a class = "linkcss" href="https://www.w3schools.com/html/" target="_blank">Visit our HTML tutorial.With Custom CSS</a></p>
+<!-- HTML Links - Image as Link -->
+<p><a href="default.asp">
+  <img src="/home/thyrmr/Desktop/JS Practice/img/smiley.gif" alt="HTML tutorial" style="width:42px;height:42px;border:0">
+</a></p>
+<!-- HTML Links - Create a Bookmark -->
+<a href="#bookmark" title="Bookmark for jump to required field in page">Jump to Heading 1</a>
+
+<head>
+  <link rel="stylesheet" href="styles.css">
+<style>
+#p01 {
+    color: green;
+    font-family:courier;
+    font-size:160%;
+}
+p.error {
+    color: red;
+    font-family:sans-serif;;
+}
+</style>
+</head>
 </body>
 </html>
