--- a/html/HTMLBasics.html
+++ b/html/HTMLBasics.html
@@ -122,12 +122,46 @@ In HTML, links are defined with the <a> tag: -->
 
 <a class = "" href="https://www.w3schools.com/html/">Visit our HTML tutorial</a>
 <p><a class = "linkcss" href="https://www.w3schools.com/html/" target="_blank">Visit our HTML tutorial.With Custom CSS</a></p>
-<!-- HTML Links - Image as Link -->
-<p><a href="default.asp">
+<!-- HTML Links - Image as Link
+target attribute helps to where to open link ex: same page , another window-->
+<p><a href="https://www.w3schools.com" target="_blank">
   <img src="/home/thyrmr/Desktop/JS Practice/img/smiley.gif" alt="HTML tutorial" style="width:42px;height:42px;border:0">
 </a></p>
 <!-- HTML Links - Create a Bookmark -->
 <a href="#bookmark" title="Bookmark for jump to required field in page">Jump to Heading 1</a>
+<!-- HTML Images -->
+<p></p>
+<img src="/home/thyrmr/Desktop/JS Practice/img/pulpitrock.jpg" alt="Flowers in Chania" width="460" height="345">
+<img src="/home/thyrmr/Desktop/JS Practice/img/img_girl.jpg" alt="Flowers in Chania" width="460" height="345">
+<img src="/home/thyrmr/Desktop/JS Practice/img/img_chania.jpg" alt="Flowers in Chania" width="460" height="345">
+
+<div class="divborder clearfix">
+<img class="img2" src="/home/thyrmr/Desktop/JS Practice/img/img_chania.jpg" alt="Pineapple" width="170" height="170">
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum...</div>
+
+<img src="/home/thyrmr/Desktop/JS Practice/img/workplace.jpg" alt="Workplace" usemap="#workmap" width="400" height="379">
+
+<!-- Use the <map> tag to define an image-map. An image-map is an image with clickable areas. -->
+
+<map name="workmap">
+  <area shape="rect" coords="34,44,270,350" alt="Computer" href="computer.htm">
+  <area shape="rect" coords="290,172,333,250" alt="Phone" href="phone.htm">
+  <area shape="circle" coords="337,300,44" alt="Cup of coffee" href="coffee.htm">
+</map>
+<!-- Background Image -->
+<p style="background-image:url('/home/thyrmr/Desktop/JS Practice/img/pulpitrock.jpg')">
+You can specify background images<br>
+for any visible HTML element.<br>
+In this example, the background image<br>
+is specified for this paragraph.<br>
+By default, the background-image<br>
+will repeat itself in the direction(s)<br>
+where it is smaller than the element<br>
+where it is specified. (Try resizing the<br>
+browser window to see how the<br>
+background image behave.
+</p>
+
 
 <head>
   <link rel="stylesheet" href="styles.css">
@@ -140,6 +174,17 @@ In HTML, links are defined with the <a> tag: -->
 p.error {
     color: red;
     font-family:sans-serif;;
+}
+.clearfix {
+    overflow: auto;
+}
+
+.img2 {
+    float: right;
+}
+.divborder {
+    border: 3px solid #4CAF50;
+    padding: 5px;
 }
 </style>
 </head>
