--- a/html/HTMLBasics.html
+++ b/html/HTMLBasics.html
@@ -149,6 +149,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nu
   <area shape="circle" coords="337,300,44" alt="Cup of coffee" href="coffee.htm">
 </map>
 <!-- Background Image -->
+<!-- To add a background image on a paragraph, specify the background-image property on the P element: -->
 <p style="background-image:url('/home/thyrmr/Desktop/JS Practice/img/pulpitrock.jpg')">
 You can specify background images<br>
 for any visible HTML element.<br>
